# Ros2-Car-Project

./: ReadMe.Md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/articubot_one/lib/articubot_one/: obstacle_avoidance.py
install/articubot_one/share/articubot_one/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/articubot_one/share/articubot_one/cmake/: articubot_oneConfig-version.cmake  articubot_oneConfig.cmake
install/articubot_one/share/articubot_one/config/: my_controllers.yaml
install/articubot_one/share/articubot_one/description/: camera.xacro  gazebo_plugin.xacro  inertial_macros.xacro  lidar.xacro  robot_core.xacro  robot_urdf.xacro
install/articubot_one/share/articubot_one/environment/: ament_prefix_path.dsv  path.dsv
install/articubot_one/share/articubot_one/launch/: launch_sim.launch.py  rsp.launch.py
install/articubot_one/share/articubot_one/worlds/: cone.sdf
log/: latest_build
src/articubot_one/: CMakeLists.txt  package.xml
src/articubot_one/config/: my_controllers.yaml
src/articubot_one/description/: camera.xacro  gazebo_plugin.xacro  lidar.xacro  robot_core.xacro  robot_urdf.xacro
src/articubot_one/launch/: launch_sim.launch.py
src/articubot_one/src/: obstacle_avoidance.py
src/articubot_one/worlds/: cone.sdf
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/articubot_one/share/articubot_one/: package.sh
src/install/articubot_one/share/articubot_one/launch/: rsp.launch.py
src/log/: latest_build
(+3 files in other folders)
